--- a/hexagonal-architecture/build.gradle
+++ b/hexagonal-architecture/build.gradle
@@ -26,6 +26,8 @@ dependencies {
 
     compileOnly 'org.projectlombok:lombok'
 
+    runtimeOnly 'com.h2database:h2'
+
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
 
