feat: 캐시 옵션 추가 ( 테스트 필요 )

--- a/redis-circuitbreaker/compose.yaml
+++ b/redis-circuitbreaker/compose.yaml
@@ -4,6 +4,8 @@ services:
     restart: 'always'
     ports:
       - '6379:6379'
+    environment:
+      REDIS_PASSWORD: 'password'
   mariadb:
     image: 'mariadb'
     restart: 'always'
