feat: save 메소드에서 서킷브레이커 제거

--- a/redis-circuitbreaker/src/main/resources/application.yaml
+++ b/redis-circuitbreaker/src/main/resources/application.yaml
@@ -6,3 +6,6 @@ spring:
       - classpath:mariadb.yaml
       - classpath:jpa.yaml
       - classpath:docker.yaml
+      - classpath:cache.yaml
+      - resilience4j.yaml
+      - classpath:logging.yaml
