--- a/redis-circuitbreaker/src/main/resources/redis.yaml
+++ b/redis-circuitbreaker/src/main/resources/redis.yaml
@@ -5,9 +5,5 @@ spring:
       port: 6379
       database: 0
       password: password
-      connect-timeout: 60000
-  cache:
-    redis:
-      time-to-live: 10000
-      enable-statistics: true
-    type: redis
+      connect-timeout: 5000
+      timeout: 5000
