feat: 글로벌 캐시 & 카프카 트랜잭션 예제 추가

--- a/caching-strategy/src/main/resources/logging.yaml
+++ b/caching-strategy/src/main/resources/logging.yaml
@@ -1,3 +1,8 @@
 logging:
   level:
+    root: INFO
     org.springframework.cache: TRACE
+    org.springframework.transaction: trace
+    org.springframework.kafka.transaction: trace
+    org.springframework.kafka: trace
+    org.hibernate.SQL: trace
