--- a/caching-strategy/src/main/resources/kafka.yaml
+++ b/caching-strategy/src/main/resources/kafka.yaml
@@ -1,3 +1,7 @@
 spring:
   kafka:
-    bootstrap-servers: 'localhost:9092'
+    bootstrap-servers: 'localhost:29092, localhost:39092, localhost:49092'
+    producer:
+      transaction-id-prefix: tx-
+    consumer:
+      isolation-level: read_committed
