--- a/event-driven-basic/src/main/resources/kafka.yaml
+++ b/event-driven-basic/src/main/resources/kafka.yaml
@@ -1,15 +1,19 @@
 spring:
   kafka:
     consumer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: 'localhost:29092'
       group-id: foo
       auto-offset-reset: latest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       enable-auto-commit: true
+      isolation-level: read_committed
     producer:
-      bootstrap-servers: localhost:9092
+      bootstrap-servers: 'localhost:29092'
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
-      value-serializer: com.swszz.kafkaretrystrategy.serializer.AnyToJsonStringSerializer
+      value-serializer: com.swszz.eventdrivenbasic.kafka.serializer.AnyToJsonStringSerializer
+      transaction-id-prefix: tx-
     template:
       default-topic: sample
+    admin:
+      auto-create: true
